--- a/app/globals.css
+++ b/app/globals.css
@@ -192,3 +192,21 @@
   background: #65c4fa;
   filter: blur(150px);
 }
+
+.hero__logo::after {
+  content: "";
+  display: block;
+  height: 4px;
+  margin-left: 9rem;
+  transform: translateY(-23px);
+  /* background: linear-gradient(90deg, hsl(var(--clr-fast--primary)) 15%, hsl(var(--clr-safe)) 50%, hsl(var(--clr-cheap)) 85%); */
+  /* background: linear-gradient(90deg, hsl(var(--clr-fast--primary) / 0) 0%,hsl(var(--clr-fast--primary)) 15%,hsl(var(--clr-safe)) 50%,hsl(var(--clr-cheap)) 85%, hsl(var(--clr-cheap) / 0) 100%); */
+  background: linear-gradient(
+    90deg,
+    hsl(var(--clr-fast--primary) / 0) 0,
+    hsl(var(--clr-fast--primary)) 20%,
+    hsl(var(--clr-safe)) 40%,
+    hsl(var(--clr-safe)) 60%,
+    hsl(var(--clr-cheap)) 80%,
+    hsl(var(--clr-cheap) / 0) 100%
+  );
