--- a/app/globals.css
+++ b/app/globals.css
@@ -37,7 +37,7 @@
 
   /* font-families */
 
-  
+
 }
 
 @media (min-width: 450px) {
@@ -97,27 +97,24 @@
 .fs-700 {
   font-size: var(--fs-700);
 }
+
 .gradient-01 {
-  background-image: linear-gradient(
-    270deg,
-    hsl(295deg 76% 51%) 0%,
-    hsl(284deg 70% 73%) 26%,
-    hsl(257deg 70% 86%) 39%,
-    hsl(202deg 92% 90%) 50%,
-    hsl(215deg 77% 81%) 61%,
-    hsl(221deg 73% 70%) 74%,
-    hsl(220deg 76% 51%) 100%
-  );
+  background-image: linear-gradient(270deg,
+      hsl(295deg 76% 51%) 0%,
+      hsl(284deg 70% 73%) 26%,
+      hsl(257deg 70% 86%) 39%,
+      hsl(202deg 92% 90%) 50%,
+      hsl(215deg 77% 81%) 61%,
+      hsl(221deg 73% 70%) 74%,
+      hsl(220deg 76% 51%) 100%);
   filter: blur(125px);
 }
 
 .hero-gradient {
-  background: linear-gradient(
-    97.86deg,
-    #a509ff 0%,
-    #34acc7 53.65%,
-    #a134c7 100%
-  );
+  background: linear-gradient(97.86deg,
+      #a509ff 0%,
+      #34acc7 53.65%,
+      #a134c7 100%);
 }
 
 .gradient-02 {
@@ -164,11 +161,9 @@
 }
 
 .gradient-05 {
-  background: linear-gradient(
-    180deg,
-    rgba(255, 255, 255, 0.04) 0%,
-    rgba(255, 255, 255, 0) 100%
-  );
+  background: linear-gradient(180deg,
+      rgba(255, 255, 255, 0.04) 0%,
+      rgba(255, 255, 255, 0) 100%);
 }
 
 .feedback-gradient {
@@ -199,15 +194,11 @@
   height: 4px;
   margin-left: 9rem;
   transform: translateY(-23px);
-  /* background: linear-gradient(90deg, hsl(var(--clr-fast--primary)) 15%, hsl(var(--clr-safe)) 50%, hsl(var(--clr-cheap)) 85%); */
-  /* background: linear-gradient(90deg, hsl(var(--clr-fast--primary) / 0) 0%,hsl(var(--clr-fast--primary)) 15%,hsl(var(--clr-safe)) 50%,hsl(var(--clr-cheap)) 85%, hsl(var(--clr-cheap) / 0) 100%); */
-  background: linear-gradient(
-    90deg,
-    hsl(var(--clr-fast--primary) / 0) 0,
-    hsl(var(--clr-fast--primary)) 20%,
-    hsl(var(--clr-safe)) 40%,
-    hsl(var(--clr-safe)) 60%,
-    hsl(var(--clr-cheap)) 80%,
-    hsl(var(--clr-cheap) / 0) 100%
-  );
+  background: linear-gradient(90deg,
+      hsl(var(--clr-fast--primary) / 0) 0,
+      hsl(var(--clr-fast--primary)) 20%,
+      hsl(var(--clr-safe)) 40%,
+      hsl(var(--clr-safe)) 60%,
+      hsl(var(--clr-cheap)) 80%,
+      hsl(var(--clr-cheap) / 0) 100%);
 }
