--- a/app/globals.css
+++ b/app/globals.css
@@ -339,3 +339,246 @@
       hsl(var(--clr-cheap)) 80%,
       hsl(var(--clr-cheap) / 0) 100%);
 }
+
+
+/****************************************************
+                   background animation
+*****************************************************/
+
+.bg-circle__wrapper,
+.bg-dot__wrapper {
+  position: absolute;
+}
+
+.bg-circle {
+  border-radius: 50%;
+  border: 1px solid hsl(var(--clr-fast--primary) / 0.3);
+}
+
+.bg-dot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50px;
+  /* background: hsl(var(--clr-light)); */
+  background: hsl(var(--clr-cheap));
+  background: radial-gradient(
+    circle,
+    hsl(var(--clr-cheap)) 0%,
+    hsl(var(--clr-cheap) / 0.1) 60%,
+    hsl(var(--clr-white) / 0.5) 100%
+  );
+}
+
+.bg-circle__scale--1 {
+  display: none;
+}
+
+@media (min-width: 1050px) {
+  .bg-circle__scale--1 {
+    display: block;
+    width: 400px;
+    height: 400px;
+  }
+}
+
+
+.bg-circle__scale--2 {
+  width: 100px;
+  height: 100px;
+}
+
+.bg-dot__scale--1 {
+  transform: scale(2);
+}
+
+.bg-dot__scale--2,
+.bg-dot__scale--3 {
+  transform: scale(1);
+}
+
+.bg-dot__scale--4 {
+  transform: scale(0.5);
+}
+
+.bg-dot__scale--5 {
+  transform: scale(0.7);
+}
+
+.bg-circle__wrapper--1 {
+  top: 200px;
+  left: -100px;
+  -webkit-animation: animationFramesOne 15s linear infinite;
+  animation: animationFramesOne 15s linear infinite;
+  z-index: -1;
+}
+
+.bg-circle__wrapper--2 {
+  bottom: 250px;
+  right: 150px;
+  -webkit-animation: animationFramesOne 10s infinite linear;
+  animation: animationFramesOne 10s infinite linear;
+  z-index: -1;
+}
+
+.bg-dot__wrapper--1 {
+  top: 20%;
+  left: 50%;
+  -webkit-transform: translateY(-20%) translateX(-50%);
+  transform: translateY(-20%) translateX(-50%);
+  -webkit-animation: animationFramesOne 25s infinite linear;
+  animation: animationFramesOne 25s infinite linear;
+  z-index: -1;
+}
+
+.bg-dot__wrapper--2 {
+  top: 15%;
+  left: 5%;
+  -webkit-transform: translateY(-15%) translateX(-5%);
+  transform: translateY(-15%) translateX(-5%);
+  -webkit-animation: animationFramesOne 10s infinite linear;
+  animation: animationFramesOne 10s infinite linear;
+  z-index: -1;
+}
+
+.bg-dot__wrapper--3 {
+  bottom: 20%;
+  left: 35%;
+  -webkit-transform: translateY(-10%) translateX(-35%);
+  transform: translateY(-10%) translateX(-35%);
+  -webkit-animation: animationFramesOne 20s infinite linear;
+  animation: animationFramesOne 20s infinite linear;
+  z-index: -1;
+}
+
+.bg-dot__wrapper--4 {
+  bottom: 50%;
+  left: 50%;
+  -webkit-transform: translateY(-50%) translateX(-50%);
+  transform: translateY(-50%) translateX(-50%);
+  -webkit-animation: animationFramesOne 15s infinite linear;
+  animation: animationFramesOne 15s infinite linear;
+  z-index: -1;
+}
+
+.bg-dot__wrapper--5 {
+  top: 20%;
+  right: 10%;
+  -webkit-transform: translateY(-20%) translateX(-10%);
+  transform: translateY(-20%) translateX(-10%);
+  -webkit-animation: animationFramesOne 20s infinite linear;
+  animation: animationFramesOne 20s infinite linear;
+  z-index: -1;
+}
+
+.lines {
+  /* position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  margin: auto;
+  width: 90vw;
+  z-index: -1; */
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  padding-inline: 2em;
+  z-index: -1;
+
+  display: flex;
+  justify-content: space-around;
+  overflow: hidden;
+}
+
+.lines .line {
+  top: 0;
+  width: 1px;
+  left: 50%;
+  /* position: absolute;
+  width: 1px;
+  height: 100%;
+  top: 0;
+  left: 50%;
+  background: var(--black-color); */
+  /* overflow: hidden; */
+}
+
+.lines .line::after {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 15vh;
+  width: 1px;
+  top: -50%;
+  /* left: 0; */
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(255, 255, 255, 0)),
+    color-stop(75%, #ffffff),
+    to(#ffffff)
+  );
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 0%,
+    hsl(var(--bg-color)) 75%,
+    hsl(var(--bg-color)) 100%
+  );
+  -webkit-animation: run 15s 0s infinite;
+  animation: run 15s 0s infinite;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
+  animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
+  border-radius: 50%;
+}
+
+.lines .line:nth-child(1) {
+  /* margin-left: -25%; */
+}
+
+.lines .line:nth-child(1)::after {
+  animation-delay: 0.5s;
+  --bg-color: var(--clr-fast--primary);
+}
+
+.lines .line:nth-child(2) {
+  /* margin-left: 0%; */
+}
+
+.lines .line:nth-child(2)::after {
+  animation-delay: 1s;
+  --bg-color: var(--clr-safe);
+}
+
+.lines .line:nth-child(3) {
+  /* margin-left: 25%; */
+}
+
+.lines .line:nth-child(3)::after {
+  animation-delay: 0s;
+  --bg-color: var(--clr-cheap);
+}
+
+@-webkit-keyframes run {
+  0% {
+    top: -20%;
+  }
+
+  100% {
+    top: 110%;
+  }
+}
+
+@keyframes run {
+  0% {
+    top: -20%;
+  }
+
+  100% {
+    top: 110%;
+  }
+}
