--- a/app/globals.css
+++ b/app/globals.css
@@ -77,7 +77,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Eudoxus Sans", sans-serif;
+  /* font-family: "Eudoxus Sans", sans-serif; */
   scroll-behavior: smooth;
 }
 
@@ -225,7 +225,7 @@
 
 
 .container-wrapper {
-  padding: 2em 2em 0 2em;
+  padding: 1em 2em 0 2em;
 }
 
 .m-inline-auto{
